--- a/index.html
+++ b/index.html
@@ -1,9 +1,76 @@
+<!--Unit3-01-HTML-AreaTrapezoid-->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <!--Metadata-->
+    <meta charset="utf-8" />
+    <meta name="description" content="Area of a Trapezoid, with a JS file" />
+    <meta name="keywords" content="immaculata, ics2o" />
+    <meta name="author" content="Kukwac" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./Favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./Favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./Favicons/favicon-32x32.png" />
+    <link rel="manifest" href="./Favicons/site.webmanifest" />
+    <!--MDL stylesheets-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
+    <!--CSS stylesheet-->
+    <link rel="stylesheet" href="./css/style.css" />
+    <!--Title-->
+    <title>Volume of a Sphere</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <!--Web page content with a Javascript file and MDL components-->
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Volume of a Sphere</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <table>
+          <tr>
+            <th>
+              <img src="./images/sphere.png" alt="Sphere" width="75%" height="auto"/>
+            </th>
+            <th>
+              <h2>Formula</h2>
+              <h3>V = 4/3 * PI * r^3 <h3>
+            </th>
+          </tr>
+        </table>
+        <!-- Simple Textfield -->
+        <form action="#">
+          <h6>Radius</h6>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="float"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="radius"
+            />
+            <label class="mdl-textfield__label" for="length-of-base1">Radius ...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+				
+        <!-- Raised button with ripple -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="calculate()"
+        >
+          Calculate
+        </button>
+        <br />
+        <p>
+          <div id="volume">
+          </div>
+        </p>
+      </main>
+    </div>
   </body>
 </html>
