--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!--Unit3-01-HTML-AreaTrapezoid-->
+<!--Unit3-03-HTML-Volume of a Sphere-->
 <!DOCTYPE html>
 <html>
   <head>
     <!--Metadata-->
     <meta charset="utf-8" />
-    <meta name="description" content="Area of a Trapezoid, with a JS file" />
-    <meta name="keywords" content="immaculata, ics2o" />
+    <meta name="description" content="Volume of a Sphere" />
+    <meta name="keywords" content="immaculata, icd2o" />
     <meta name="author" content="Kukwac" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Favicon-->
